# NumCompute-Stream

./: .gitignore  README.md
NumCompute/: pyproject.toml
NumCompute/benchmark/: benchmark results.md  benchmark_streaming.py
NumCompute/benchmark/results/: loop_vs_vectorized_results.csv  streaming_model_results.csv
NumCompute/demo/: Mall_Customers.csv  quickstart.ipynb  stream_demo.ipynb  stream_demo_dataset.csv
NumCompute/numcompute_stream/: __init__.py  ensemble.py  io.py  metrics.py  pipeline.py  preprocessing.py  stats.py  stream.py  tree.py  utils.py  visualise.py
NumCompute/numcompute_stream.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
NumCompute/tests/: test_ensemble.py  test_io.py  test_metrics.py  test_metrics_streaming.py  test_pipeline_streaming.py  test_preprocessing.py  test_preprocessing_streaming.py  test_rank.py  test_sort_search.py  test_stats.py  test_stats_streaming.py  test_stream.py  test_tree.py  test_utils.py  test_visualise.py
NumCompute/tests/legacy/: test_io.py  test_metrics.py  test_pipeline.py  test_stats.py  test_utils.py
