[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numcompute"
version = "0.1.0"
description = "A lightweight numerical computing library built from scratch"
authors = [
  { name = "vedant hire", email = "a3197540@adelaide.edu.au" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.21"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["numcompute*"]